--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <script src="js/game/character/flare.js"></script>
     <script src="js/game/character/watame.js"></script>
 
+    <script src="js/game/dust.js"></script>
+
     <script src="js/game/activity/activity.js"></script>
     <script src="js/game/activity/stage.js"></script>
     <script src="js/game/activity/opening.js"></script>
